# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironauth-oidc"
version = "0.1.0"
description = "IronAuth OIDC core provider: the authorization endpoint and the authorization_code grant with single-use, binding-checked, revocable codes"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Explicit test list: the DB-backed integration tests are gated behind
# required-features = ["testing"] so the DB-free lanes (clippy, msrv, musl,
# cargo check) neither enable the store's test harness nor try to run the DB
# tests. Auto-discovery is off so nothing slips past the gate. The structural
# registry test is database-free and runs on every lane.
autotests = false

[dependencies]
ironauth-env.workspace = true
ironauth-config.workspace = true
ironauth-store.workspace = true
ironauth-jose.workspace = true
# The SSRF-hardened outbound fetcher: the ONLY path sector_identifier_uri
# validation reaches the network through. Depending on ironauth-fetch (not an
# HTTP-client crate) keeps scripts/http-audit.sh satisfied.
ironauth-fetch.workspace = true

# Argon2id verification/hashing for the bootstrap login and registration surface
# (issue #20), at OWASP defaults. Salt bytes come from the ironauth-env entropy
# seam, never the crate's own RNG.
argon2.workspace = true

axum = { workspace = true, features = ["form", "query", "json"] }
http.workspace = true
serde = { workspace = true }
serde_json.workspace = true
# URL-safe, no-padding base64 for the PKCE S256 comparison and for decoding a
# token's jti in tests. Already in the tree via ironauth-store; no new crate.
base64.workspace = true
# SHA-256 for the PKCE S256 code_challenge derivation. Pure Rust, permissive,
# already in the tree via ironauth-store; no new crate.
sha2.workspace = true
tracing.workspace = true
# The metrics facade (already in the tree; the server installs the Prometheus
# recorder). Meters authorization-code reuse and redeem faults so a dropped
# revoke or a burst of reuse is visible in aggregate, not just per-request logs.
metrics.workspace = true

[features]
default = []
# Enables the ironauth-store real-database harness for the DB-backed integration
# tests (mirrors ironauth-admin's `testing` gate). Adds no runtime surface.
testing = ["ironauth-store/testing"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
# Verify tokens end to end through the one hardened verify path.
ironauth-jose = { workspace = true }
# Database-free unit tests build an Env and a deterministic entropy source.
ironauth-env = { workspace = true }
# Base64 for building client_secret_basic Authorization headers in the tests.
base64.workspace = true
# A real third-party Rust OAuth 2.0 client, used to prove client_secret_basic and
# client_secret_post interoperate through a mainstream library (issue #20
# acceptance). default-features off drops its bundled reqwest client (the test
# drives the in-process router directly), so the dev-dependency graph stays lean
# and free of any advisory-flagged transitive crate; it builds under MSRV 1.85.
# The sibling OIDC client crate (openidconnect) is intentionally NOT used: it
# transitively depends on the `rsa` crate (RUSTSEC-2023-0071, the Marvin timing
# attack, no fixed version), which the project's cargo-deny supply-chain gate
# rejects, and silencing a key-recovery advisory in an identity provider is not
# acceptable. The literal openidconnect / JS / Python conformance is deferred to
# the M4/M9 certification wave.
oauth2 = { workspace = true }
# The sector-identifier SSRF test drives the hardened fetcher through injected
# resolver/dialer seams, which live behind ironauth-fetch's `test-harness`
# feature.
ironauth-fetch = { workspace = true, features = ["test-harness"] }

# Structural exclusion of forbidden flows: the grant-type, response-type, and
# PKCE-method registries cannot express ROPC, authorization-endpoint access
# tokens, or plain PKCE. Database-free, so it runs on every lane (incl. MSRV).
[[test]]
name = "structural"
path = "tests/structural.rs"

# Per-issuer JWKS and discovery HTTP surface (issue #19): explicit Cache-Control
# and ETag, 304 on a matching If-None-Match, and disjoint issuers and key sets
# across environments. Database-free.
[[test]]
name = "issuer_http"
path = "tests/issuer_http.rs"

# Pairwise subject derivation (issue #19): the one shared derivation returns an
# identical sub across the ID token and UserInfo call sites, and memoization keeps
# an already-derived sub stable. Database-free.
[[test]]
name = "pairwise"
path = "tests/pairwise.rs"

# sector_identifier_uri validation (issue #19): rejects http, rejects documents
# missing a redirect_uri, and blocks SSRF targets through the hardened fetcher.
# Database-free (drives the fetcher through injected resolver/dialer seams).
[[test]]
name = "sector"
path = "tests/sector.rs"

# Full authorization-code flow issuing tokens end to end, single-use, binding
# re-checks, expiry, reuse revocation, and cross-scope denial, over a real
# database (DATABASE_URL); see scripts/with-test-db.sh.
[[test]]
name = "flow"
path = "tests/flow.rs"
required-features = ["testing"]

# The conditional ID-token claims end to end (issue #14): the REQUIRED claims,
# exact nonce echo, honest acr/amr, auth_time emitted only when due and always
# truthful (incl max_age=0 and require_auth_time), and no at_hash/c_hash/azp from
# a token-endpoint ID token. Over a real database (DATABASE_URL).
[[test]]
name = "id_token"
path = "tests/id_token.rs"
required-features = ["testing"]

# The single-use concurrency race: N concurrent exchanges of one code against one
# shared Postgres, exactly one 200 and N-1 invalid_grant.
[[test]]
name = "race"
path = "tests/race.rs"
required-features = ["testing"]

# The OIDC data-plane IDOR probes registered with the #6 harness, over a real
# database.
[[test]]
name = "idor"
path = "tests/idor.rs"
required-features = ["testing"]

# The full register -> login -> consent -> code -> token flow driven end to end
# through the HTTP/protocol path (parsing the HTML forms and posting the fields),
# plus the page hardening assertions. Rust-native, no browser (issue #20).
[[test]]
name = "interactive"
path = "tests/interactive.rs"
required-features = ["testing"]

# Secret-based client authentication: client_secret_basic and client_secret_post,
# the registered-method enforcement, and spec-exact invalid_client (issue #20).
[[test]]
name = "client_auth"
path = "tests/client_auth.rs"
required-features = ["testing"]

# Interop: both client-secret methods exercised through the mainstream oauth2
# Rust client crate, including the client_secret_basic form-urlencoding case.
[[test]]
name = "interop"
path = "tests/interop.rs"
required-features = ["testing"]

[lints]
workspace = true
