# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironauth-oidc"
version = "0.1.0"
description = "IronAuth OIDC core provider: the authorization endpoint and the authorization_code grant with single-use, binding-checked, revocable codes"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Explicit test list: the DB-backed integration tests are gated behind
# required-features = ["testing"] so the DB-free lanes (clippy, msrv, musl,
# cargo check) neither enable the store's test harness nor try to run the DB
# tests. Auto-discovery is off so nothing slips past the gate. The structural
# registry test is database-free and runs on every lane.
autotests = false

[dependencies]
ironauth-env.workspace = true
ironauth-config.workspace = true
ironauth-store.workspace = true
ironauth-jose.workspace = true
# The SSRF-hardened outbound fetcher: the ONLY path sector_identifier_uri
# validation reaches the network through. Depending on ironauth-fetch (not an
# HTTP-client crate) keeps scripts/http-audit.sh satisfied.
ironauth-fetch.workspace = true

# Argon2id verification/hashing for the bootstrap login and registration surface
# (issue #20), at OWASP defaults. Salt bytes come from the ironauth-env entropy
# seam, never the crate's own RNG.
argon2.workspace = true

# `tokio` gates axum's `ConnectInfo<SocketAddr>` extractor, which the DCR registration
# endpoint reads for its non-forgeable rate-limit source key (issue #31, FIX 3).
axum = { workspace = true, features = ["form", "query", "json", "tokio"] }
http.workspace = true
serde = { workspace = true }
serde_json.workspace = true
# Parse the (possibly repeated) RFC 8707 `resource` request parameter (issue #28)
# from a raw query/form body: the same crate axum uses for form/query extraction,
# so no new crate enters the graph.
serde_urlencoded.workspace = true
# URL-safe, no-padding base64 for the PKCE S256 comparison and for decoding a
# token's jti in tests. Already in the tree via ironauth-store; no new crate.
base64.workspace = true
# SHA-256 for the PKCE S256 code_challenge derivation. Pure Rust, permissive,
# already in the tree via ironauth-store; no new crate.
sha2.workspace = true
tracing.workspace = true
# The metrics facade (already in the tree; the server installs the Prometheus
# recorder). Meters authorization-code reuse and redeem faults so a dropped
# revoke or a burst of reuse is visible in aggregate, not just per-request logs.
metrics.workspace = true

[features]
default = []
# Enables the ironauth-store real-database harness for the DB-backed integration
# tests (mirrors ironauth-admin's `testing` gate). Adds no runtime surface.
testing = ["ironauth-store/testing"]

[dev-dependencies]
# net + io-util let the #25 client-assertion test stand up an in-process loopback
# HTTP server that serves a client JWK Set through the fetcher's injected dialer.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util"] }
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
# Verify tokens end to end through the one hardened verify path.
ironauth-jose = { workspace = true }
# Database-free unit tests build an Env and a deterministic entropy source.
ironauth-env = { workspace = true }
# Base64 for building client_secret_basic Authorization headers in the tests.
base64.workspace = true
# A real third-party Rust OAuth 2.0 client, used to prove client_secret_basic and
# client_secret_post interoperate through a mainstream library (issue #20
# acceptance). default-features off drops its bundled reqwest client (the test
# drives the in-process router directly), so the dev-dependency graph stays lean
# and free of any advisory-flagged transitive crate; it builds under MSRV 1.85.
# The sibling OIDC client crate (openidconnect) is intentionally NOT used: it
# transitively depends on the `rsa` crate (RUSTSEC-2023-0071, the Marvin timing
# attack, no fixed version), which the project's cargo-deny supply-chain gate
# rejects, and silencing a key-recovery advisory in an identity provider is not
# acceptable. The literal openidconnect / JS / Python conformance is deferred to
# the M4/M9 certification wave.
oauth2 = { workspace = true }
# The sector-identifier SSRF test drives the hardened fetcher through injected
# resolver/dialer seams, which live behind ironauth-fetch's `test-harness`
# feature.
ironauth-fetch = { workspace = true, features = ["test-harness"] }
# The device-grant no-plaintext-in-logs acceptance test (issue #24) captures the
# tracing output of a full device flow to a buffer and asserts the device_code and
# user_code never appear in it.
tracing-subscriber = { workspace = true, features = ["fmt", "std"] }

# Structural exclusion of forbidden flows: the grant-type, response-type, and
# PKCE-method registries cannot express ROPC, authorization-endpoint access
# tokens, or plain PKCE. Database-free, so it runs on every lane (incl. MSRV).
[[test]]
name = "structural"
path = "tests/structural.rs"

# Per-issuer JWKS HTTP surface (issue #19): explicit Cache-Control and ETag, 304
# on a matching If-None-Match, and disjoint issuers and key sets across
# environments. Database-free.
[[test]]
name = "issuer_http"
path = "tests/issuer_http.rs"

# Discovery generated from live config on both well-known forms (issue #18):
# exact issuer-string match, policy-filtered algorithm arrays with the RS256
# floor, the explicit defaults-if-omitted traps, config-driven capability
# toggles, and the config-driven half of the advertised-vs-observed diff harness.
# Database-free and key-free (discovery needs only config, the issuer string, and
# the algorithm policy), so it runs on every lane.
[[test]]
name = "discovery"
path = "tests/discovery.rs"

# The runtime half of the discovery diff harness (issue #18): the LIVE merged
# router (protocol + discovery, as main.rs mounts it) is probed so every
# advertised endpoint is observed as mounted and every served protocol endpoint
# is advertised. Needs a database (it builds the real oidc_router).
[[test]]
name = "discovery_probe"
path = "tests/discovery_probe.rs"
required-features = ["testing"]

# Pairwise subject derivation (issue #19): the one shared derivation returns an
# identical sub across the ID token and UserInfo call sites, and memoization keeps
# an already-derived sub stable. Database-free.
[[test]]
name = "pairwise"
path = "tests/pairwise.rs"

# sector_identifier_uri validation (issue #19): rejects http, rejects documents
# missing a redirect_uri, and blocks SSRF targets through the hardened fetcher.
# Database-free (drives the fetcher through injected resolver/dialer seams).
[[test]]
name = "sector"
path = "tests/sector.rs"

# Full authorization-code flow issuing tokens end to end, single-use, binding
# re-checks, expiry, reuse revocation, and cross-scope denial, over a real
# database (DATABASE_URL); see scripts/with-test-db.sh.
[[test]]
name = "flow"
path = "tests/flow.rs"
required-features = ["testing"]

# The refresh-token grant end to end (issue #21): the graduated rotation policy
# (public rotate every refresh, confidential only past the TTL threshold), HTTP-layer
# reuse detection and family revocation, the offline_access consent rule for web
# clients with the first-party carve-out, and the three per-client consent modes.
# Over a real database (DATABASE_URL).
[[test]]
name = "refresh"
path = "tests/refresh.rs"
required-features = ["testing"]

# The conditional ID-token claims end to end (issue #14): the REQUIRED claims,
# exact nonce echo, honest acr/amr, auth_time emitted only when due and always
# truthful (incl max_age=0 and require_auth_time), and no at_hash/c_hash/azp from
# a token-endpoint ID token. Over a real database (DATABASE_URL).
[[test]]
name = "id_token"
path = "tests/id_token.rs"
required-features = ["testing"]

# The single-use concurrency race: N concurrent exchanges of one code against one
# shared Postgres, exactly one 200 and N-1 invalid_grant.
[[test]]
name = "race"
path = "tests/race.rs"
required-features = ["testing"]

# The OIDC data-plane IDOR probes registered with the #6 harness, over a real
# database.
[[test]]
name = "idor"
path = "tests/idor.rs"
required-features = ["testing"]

# The full register -> login -> consent -> code -> token flow driven end to end
# through the HTTP/protocol path (parsing the HTML forms and posting the fields),
# plus the page hardening assertions. Rust-native, no browser (issue #20).
[[test]]
name = "interactive"
path = "tests/interactive.rs"
required-features = ["testing"]

# Secret-based client authentication: client_secret_basic and client_secret_post,
# the registered-method enforcement, and spec-exact invalid_client (issue #20).
[[test]]
name = "client_auth"
path = "tests/client_auth.rs"
required-features = ["testing"]

# Interop: both client-secret methods exercised through the mainstream oauth2
# Rust client crate, including the client_secret_basic form-urlencoding case.
[[test]]
name = "interop"
path = "tests/interop.rs"
required-features = ["testing"]

# PKCE enforcement (S256-only, mandatory, downgrade prevention both ways), exact
# redirect matching with the loopback exception and native-app schemes, and the
# RFC 9207 iss on success and error responses (issue #13). Over a real database.
[[test]]
name = "pkce_redirect"
path = "tests/pkce_redirect.rs"
required-features = ["testing"]

# Legacy response types (id_token, code id_token, none), form_post, and the
# response-mode negotiation, disabled by default and enabled per environment
# (issue #17): spec-exact fragment responses with nonce and c_hash, the
# auto-submitting form_post whose code never enters a URL, and the
# unsupported/invalid_request rejections through the negotiated mode. Over a real
# database with a provisioned signing key.
[[test]]
name = "response_types"
path = "tests/response_types.rs"
required-features = ["testing"]

# prompt (the SET model, prompt=none through the response mode, login/consent/
# select_account/create), max_age re-authentication (including the max_age=0
# integer-falsy trap), and the login_hint / locale / display interaction-hint
# plumbing (issue #16). Over a real database with a provisioned signing key.
[[test]]
name = "prompt_hints"
path = "tests/prompt_hints.rs"
required-features = ["testing"]

# UserInfo endpoint, scope-to-claims, and the claims request parameter (issue #15),
# including the essential-acr binding whose unmet surface issue #16 refines to
# unmet_authentication_requirements. This target was missing from the manifest, so
# the #15 tests never ran (and never bound the #13 PKCE the public harness client
# requires); registered and PKCE-corrected here. Over a real database.
[[test]]
name = "userinfo"
path = "tests/userinfo.rs"
required-features = ["testing"]

# Live wiring of per-environment issuers, JWKS serving, and signing into the data
# plane over a STORE-BACKED registry (issue #194): the signing key is provisioned
# into the database, the mint and the mounted JWKS read the one lazy registry, a
# minted token's kid is present in the served JWKS and verifies against the
# published keys, the Cache-Control max-age reflects the configured window, and an
# environment named under the wrong tenant fails closed (RLS). Over a real database.
[[test]]
name = "live_wiring"
path = "tests/live_wiring.rs"
required-features = ["testing"]

# JWT (RFC 9068) and opaque access tokens with per-resource-server format selection
# (issue #29): the per-RS format choice from one environment, RFC 9068 typ/claims,
# acr/auth_time from an authenticated flow, opaque tokens that resolve only via the
# internal store function with no replayable stored material, the documented
# prefix/regex, and EdDSA/ES256 verification. Over a real database.
[[test]]
name = "token_formats"
path = "tests/token_formats.rs"
required-features = ["testing"]

# The JWT-assertion client-authentication suite (issue #25): the private_key_jwt
# per-algorithm matrix (RS/ES/PS/EdDSA) with an ES512-rejected negative, the
# iss/sub/aud/exp/jti and audience-policy rules, cross-node jti replay through the
# reusable authenticate_client seam, jwks_uri resolution and caching through the
# SSRF-hardened fetcher, the opaque wire error plus the recorded diagnostic, and a
# full token-endpoint exchange. Over a real database with a provisioned signing key.
[[test]]
name = "client_assertion"
path = "tests/client_assertion.rs"
required-features = ["testing"]

# The JWT bearer assertion grant (issue #26, RFC 7521 4.1 / RFC 7523): a simulated
# external issuer (inline jwks and jwks_uri key sources) exchanges an assertion for a
# mapped-identity access token; the full negative matrix (unregistered/disabled
# issuer, bad signature, expired, replayed jti, unmapped subject) is a uniform
# invalid_grant with a recorded diagnostic; strict issuer-only aud rejects a
# token-endpoint-audienced assertion; no refresh token; client auth fails
# independently as invalid_client; and a SHARED aud-policy test proves the one knob
# governs this grant and #25 client assertions identically. Over a real database with
# a provisioned signing key.
[[test]]
name = "jwt_bearer"
path = "tests/jwt_bearer.rs"
required-features = ["testing"]

# Dynamic Client Registration and configuration management (issue #30): omitted
# metadata takes the per-spec defaults, an RFC 7592 update rotates and invalidates
# the registration access token, native-client redirects follow RFC 8252, the RP
# Metadata Choices negotiation prefers EdDSA (else RS256), and a jwks_uri is fetched
# through the SSRF-hardened fetcher (a private-address destination is rejected).
# Over a real database with a provisioned signing key.
[[test]]
name = "client_registration"
path = "tests/client_registration.rs"
required-features = ["testing"]

# Dynamic Client Registration abuse controls (issue #31): the exposure switch
# (closed/token_gated/open) refuses unauthorized registration; an initial access
# token's reusable policy chain binds registration AND RFC 7592 updates; a rejected
# policy is opaque on the wire but recorded as a dcr.policy_rejected audit event; the
# per-environment quota and the endpoint rate limit are typed refusals with audit
# events; and an unverified-client quarantine forces consent and restricts redirects
# to https until an admin verify lifts both. Over a real database.
[[test]]
name = "dcr_abuse"
path = "tests/dcr_abuse.rs"
required-features = ["testing"]

# Pushed authorization requests (issue #27, RFC 9126) end to end through the live
# router: a pushed request_uri works exactly once, an expired one is rejected and the
# TTL is configurable, a request_uri from client A presented by client B is rejected
# and not burned, invalid parameters (redirect_uri, PKCE) are caught AT the PAR
# endpoint, the per-client and global require-PAR switches reject a plain request, the
# endpoint enforces client authentication, an external request_uri is refused with no
# outbound fetch, and discovery advertises the endpoint and flag on both well-known
# forms. Over a real database with a provisioned signing key.
[[test]]
name = "par"
path = "tests/par.rs"
required-features = ["testing"]

# Token revocation (RFC 7009) and introspection (RFC 7662) end to end through the live
# router (issue #22): an access token and a refresh token are revocable and then
# introspect as active:false; revoking a refresh token cascades to its derived access
# tokens; an unknown, malformed, or foreign-client token revocation returns a uniform
# 200 with no existence oracle; unauthenticated introspection is 401 and leaks nothing;
# a wrong token_type_hint still revokes; a cross-tenant token is inactive and not
# revocable; both endpoints and their auth methods appear in generated discovery on
# both well-known forms; and the internal revocation event is published on every
# successful revocation. Over a real database with a provisioned signing key.
[[test]]
name = "revocation_introspection"
path = "tests/revocation_introspection.rs"
required-features = ["testing"]

# The client-credentials grant with service-account principals (issue #23, RFC 6749
# 4.4 / RFC 9068): an audience-restricted at+jwt carrying per-client custom claims, a
# STABLE service-account sub distinct from client_id and consistent across issuances,
# no refresh token, the #22-consumable formats with grant linkage (revocable and
# introspectable by construction), invalid_client on a failed authentication, a
# public client refused, invalid_scope out of policy, the configurable default
# audience, the opaque format resolved through the internal store lookup, and
# scope-bound principal isolation. Over a real database with a provisioned signing key.
[[test]]
name = "client_credentials"
path = "tests/client_credentials.rs"
required-features = ["testing"]

# RFC 8707 resource indicators (issue #28): URI validation, per-client allowlist
# rejection with invalid_target, multi-resource authorization narrowed at the token
# endpoint, refresh downscoping (and expansion rejection), cross-resource replay
# rejection via audience enforcement, and opaque-token audiences reported through
# introspection. Needs a real database (DATABASE_URL).
[[test]]
name = "resource_indicators"
path = "tests/resource_indicators.rs"
required-features = ["testing"]

# The RFC 8628 device authorization grant with cross-device BCP mitigations (issue
# #24): a simulated CLI through the happy path and every RFC 8628 error state
# (authorization_pending, slow_down with an enforced interval increase, access_denied,
# expired_token); user-code entry rate limited per source with the flow dying after N
# failed matches; tokens issued ONLY after explicit approval on the verification page;
# expired codes yield expired_token and a safe page error; verification_uri_complete;
# an adversarial user-code brute-force showing entropy plus rate limiting hold; and the
# no-plaintext-device_code/user_code-in-logs acceptance check. Over a real database
# with a provisioned signing key.
[[test]]
name = "device"
path = "tests/device.rs"
required-features = ["testing"]

# The session model on the OIDC surface (issue #32): the per-(client, session) `sid`
# claim (stable across issuances for one pair, distinct across two clients of the same
# SSO session, never the session id itself) and the immediate effect of a revocation
# (a revoked session stops authenticating the authorization endpoint at once). Needs a
# real database.
[[test]]
name = "sessions"
path = "tests/sessions.rs"
required-features = ["testing"]
# RFC 9700 (OAuth 2.0 Security BCP) as executable CI conformance invariants (issue
# #38): one named test per applicable checklist item driving the LIVE endpoints, plus
# an in-binary mutation harness proving every shared checker predicate rejects the
# regression shape a flipped guard would produce (non-vacuity). The traceability
# mapping is docs/conformance/rfc9700-checklist.md and scripts/rfc9700-scan.sh binds
# every mounted endpoint to a covering test so a future endpoint cannot ship
# uncovered. Over a real database with a provisioned signing key.
[[test]]
name = "rfc9700"
path = "tests/rfc9700.rs"
required-features = ["testing"]
# The OIDF conformance seed credential (issue #37). seed.sh installs a COMMITTED
# Argon2id hash rather than computing one in a network container, so this proves
# the committed hash actually verifies the committed cert password through the
# product's own verifier, and that the harness scripts have not drifted from it.
# Database-free, so it runs on every lane.
[[test]]
name = "conformance_seed"
path = "tests/conformance_seed.rs"

# The experimental Global Token Revocation receiver end to end (issue #36): a
# strongly-authorized subject-scoped revoke ends every session and refresh family in
# scope and fans a terminal signal out per session; an unauthenticated or public-client
# caller is refused; cross-tenant isolation holds; offline families follow the hard-kill
# flag; the receiver is idempotent; and the endpoint is unmounted unless the feature is
# enabled. Over a real database with a provisioned signing key.
[[test]]
name = "global_revocation"
path = "tests/global_revocation.rs"
required-features = ["testing"]

[lints]
workspace = true
